fixed router, organized things by modules, and created an engine that validates moves for playing chess. But chess is basically sending moves through an input box, and the player plays against themselves

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chess": "^0.5.0",
     "express": "^4.17.1",
     "socket.io": "^4.3.2"
   },
