--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "chess": "^0.5.0",
+    "chess.js": "^0.12.0",
     "express": "^4.17.1",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
