--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "chess.js": "^0.12.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "socket.io": "^4.3.2",
     "uuidv4": "^6.2.12"
