--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "socket.io": "^4.3.2",
-    "uuidv4": "^6.2.12"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
