--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chess.js": "^0.12.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-chessboard": "^1.0.0",
     "react-dom": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-scripts": "4.0.3",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
