--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "chess.js": "^0.12.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.1",
     "socket.io": "^4.3.2",
     "uuid": "^8.3.2"
   },
