--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-chessboard": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "socket.io": "^4.4.0",
