--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "start:nodemon":"nodemon server.js",
+    "start:nodemon": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "chess.js": "^0.12.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fen-validator": "^1.4.1",
     "socket.io": "^4.3.2",
     "uuid": "^8.3.2"
   },
