--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chess.js": "^0.12.0",
+    "fen-validator": "^1.4.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-chessboard": "^1.0.0",
