--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
-  "trailingComma": "es5";
-  "tabWidth": 4,
-  "semi": false,
-  "singleQuote": true
+	"trailingComma": "es5",
+	"tabWidth": 2,
+	"useTabs": true,
+	"semi": false,
+	"singleQuote": false,
+	"printWidth": 80,
+	"bracketSpacing": false
 }
